minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: minio
  namespace: minio

spec:
  replicas: 1

  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      containers:

      - name: minio

        image: minio/minio:latest

        args:
          - server
          - /data
          - --console-address
          - ":9001"

        ports:
        - containerPort: 9000

        - containerPort: 9001

        volumeMounts:
        - name: storage
          mountPath: /data

      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-storage
