minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: minio
  namespace: minio

spec:
  ingressClassName: traefik

  rules:
  - host: minio.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: minio
            port:
              number: 9001
